<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/quest7_tvInfoQualQuest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quest7_tvInfoQualQuest" />
            </LinearLayout>

            <TextView
                android:id="@+id/quest7_tvQuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest7_tvQuest"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/quest7_cbCorre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest7_cbCorre" />

            <CheckBox
                android:id="@+id/quest7_cbPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest7_cbPeso" />

            <CheckBox
                android:id="@+id/quest7_cbApertada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest7_cbApertada" />

            <CheckBox
                android:id="@+id/quest7_cbRisada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest7_cbRisada" />

            <CheckBox
                android:id="@+id/quest7_cbEsforco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest7_cbEsforco" />

            <CheckBox
                android:id="@+id/quest7_cbCaminhada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest7_cbCaminhada" />

            <CheckBox
                android:id="@+id/quest7_cbEscada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest7_cbEscada" />

            <CheckBox
                android:id="@+id/quest7_cbUsaAgua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest7_cbUsaAgua" />

            <CheckBox
                android:id="@+id/quest7_cbApertadaPortaBanheiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest7_cbApertadaPortaBanheiro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <Button
                    android:id="@+id/quest7_btAnterior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Anterior" />

                <Button
                    android:id="@+id/quest7_btProximo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Proximo" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>