<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/quest10_tvInfoQualQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest10_tvInfoQualQuest" />

    </LinearLayout>

    <TextView
        android:id="@+id/quest10_tvQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest10_tvQuest"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/quest10_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/quest10_rS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SIM"
            android:checked="false" />

        <RadioButton
            android:id="@+id/quest10_rN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NAO"
            android:checked="false" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/quest10_btAnterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Anterior" />

        <Button
            android:id="@+id/quest10_btProximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Proximo" />
    </LinearLayout>

</LinearLayout>