<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/quest11_tvInfoQualQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest11_tvInfoQualQuest" />

    </LinearLayout>

    <TextView
        android:id="@+id/quest11_tvQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest11_tvQuest"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/quest11_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/quest11_rS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SIM" 
            android:checked="false"/>

        <RadioButton
            android:id="@+id/quest11_rN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NAO" 
            android:checked="false"
            android:focusable="false"/>
    </RadioGroup>

    <TextView
        android:id="@+id/quest11_tvQuais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quais"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/quest11_etQuais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine|textNoSuggestions" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/quest11_btAnterior"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Anterior" />

                <Button
                    android:id="@+id/quest11_btProximo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Proximo" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>