<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/quest1_tvInfoQualQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest1_tvInfoQualQuest" />
    </LinearLayout>

    <TextView
        android:id="@+id/quest1_tvQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest1_tvQuest"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/quest1_etQuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/quest1_btMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Menu" />

        <Button
            android:id="@+id/quest1_btProximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Proximo" />

    </LinearLayout>

</LinearLayout>